* Added snap= option for sffftwave2
* Added frame numbers for movies made with sfgraph
* Included lbfgs in user/sparse
* user/fangg: new contributor (Gang Fang)
* Added an ability to specify a colortable in a CSV file
* user/luke: new contributor (Luke Decker)
* Moved some programs from user/fomels to user/pwd
* sfzoom: example Tkinter script for interactive zooming

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Fixed nb= parameter in sfawefd2d and sfawefd3d

In APIs:

In the Python package:

In programs:

* Fixed bug with handling zero values in sfclip
* Fixed incorrect data size bug in sffindmo
* Fixed true colors in gdpen

In the build system:

* Replaced WhereIs('python') with sys.executable
* Check for OpenMP even at a single-CPU system
* Use integer*8 in f77 examples

===Changes in defaults and interfaces===

==Release 1.4 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/lowrank: Seismic wave extrapolation using lowrank symbol
  approximation (Fomel, Ying, and Song)
* jsg/crs: Non-hyperbolic common reflection surface (Fomel and
  Kazinnik)
* trip/iwave: Using IWAVE (Symes)
* Viking Graben data moved to the public data server
* sep/fat: Imaging complex structures with first-arrival traveltimes
  (Bevc)
* sep/helft: Multi-dimensional Fourier transforms in the helical
  coordinate system (Rickett and Guitton)

To SCons:
* Support for XQuartz on Macs - looking in /opt/X11 directories 
* np= parameter in Flow() for mpi programs
* sfdocs generated for all "pens" in pens/main
* pre-compilation of modules in book/Recipes
* upgraded to scons-2.2.0

To documentation:
* Self-doc is complete now for sfawefd2d and 3d

To APIs:
* python API (m8r or rsf.api) is now always installed
* tell and seek added to C++ API
* added support for FFTW and PSP
* shape() and reshape() methods in File class (python API) reversed
  for consistency with numpy

To the Python package: