@@ -51,9 +51,15 @@ Result('fft','fft frame','Overlay')
 Flow('fcut','frame fft',
      '''
      mask max=%g | 
-     dd type=float | rtoc | 
-     mul ${SOURCES[1]}
+     dd type=float
      ''' % cut)
+
+#Flow('fcut','frame fft',
+#     '''
+#     mask max=%g | 
+#     dd type=float | rtoc | 
+#     mul ${SOURCES[1]}
+#     ''' % cut)
 
 # Inverse FFT
 Flow('sig','fcut',
